--- a/prometheus.yml
+++ b/prometheus.yml
@@ -13,3 +13,9 @@ scrape_configs:
   - job_name: 'redis'
     static_configs:
       - targets: ['redis-exporter:9121']
+
+  - job_name: 'your_app'
+    scrape_interval: 15s
+    static_configs:
+      - targets: ['localhost:8080'] # Например: ['localhost:8080']
+    metrics_path: '/metrics' # Стандартный эндпоинт для Prometheus
