--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -7,6 +7,8 @@ services:
     restart: unless-stopped
     ports:
       - "8080:8080"
+    volumes:
+      - ./uploads:/uploads
     environment:
       - APP_ENV=production
     depends_on:
